fixup invalid CSS so we correctly implement letter-spacing

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,6 @@
 /* admin.css */
 .mimi-identity {
-	text-shadow: letter-spacing: -1px;
+	letter-spacing: -1px;
 	text-shadow: 0 2px 0 #4FB3E1;
 	position: relative;
 	padding: 12px 12px 12px 200px;
